// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 67859,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in single transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 43393,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in single checkpoint 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 40608,
}
`;

exports[`EthVault - withdraw enter exit queue locks tokens for the time of exit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 74329,
}
`;

exports[`EthVault - withdraw enter exit queue reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 75005,
}
`;

exports[`EthVault - withdraw redeem claims fees with not enough vault assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61846,
}
`;

exports[`EthVault - withdraw redeem reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 47197,
}
`;

exports[`EthVault - withdraw redeem transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 43920,
}
`;

exports[`EthVault - withdraw update exit queue adds checkpoint 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 102258,
}
`;

exports[`EthVault - withdraw update exit queue claims fees with required assets larger than vault's balance 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 110678,
}
`;

exports[`EthVault - withdraw update exit queue for not all the queued shares 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 108481,
}
`;
